--- a/education.html
+++ b/education.html
@@ -20,7 +20,7 @@
                     <div>
                         <ul id="slide-out" class="side-nav red accent-4 text-header">
                             <li><a href="C:/Users/msila/Desktop/HTML/website.html"><span class="white-text">About Me</span><i class="material-icons md-24" style="float:right;">account_circle</i></a></li>
-                            <li><a href="file:///C:/Users/msila/Desktop/HTML/education.html"><span class="white-text">Education</span><i class="material-icons md-24" style="float:right;">school</i></a></li>
+                            <li><a href="#!"><span class="white-text">Education</span><i class="material-icons md-24" style="float:right;">school</i></a></li>
                             <li><a href="#!"><span class="white-text">Work Experience</span><i class="material-icons md-24" style="float:right;">work</i></a></li>
                             <li><a href="#!"><span class="white-text">My Projects</span><i class="material-icons md-24" style="float:right;">memory</i></a></li>
                             <li><a href="#!"><span class="white-text">Download Resume</span><i class="material-icons md-24" style="float:right;">get_app</i></a></li>
@@ -29,11 +29,43 @@
                         <a href="#" data-activates="slide-out" class="button-collapse show-on-large red accent-4"><i class="material-icons">menu</i></a>
                     </div>
                     <div class="header right text-header">
-                        <a href="C:/Users/msila/Desktop/HTML/website.html">Michael Sila  </a>
+                        <a href="C:/Users/msila/Desktop/HTML/education.html">Education</a>
                 </div>
                     
             </nav>
         </header>
+        <div class="page-body">
+            <div class="red accent-4 sub-header">
+                <h3 class="center white-text">Iowa State University</h3>
+            </div>
+            <div class="container row">
+                <div class="col l6 s12">
+                    <div class="slider">
+                        <ul class="slides">
+                            <li>
+                                <img src="images/iowa-state/sign_outsideMU.jpg">
+                            </li>
+                            <li>
+                                <img src="images/iowa-state/campanille_snow.jpg">
+                            </li>
+                            <li>
+                                <img src="images/iowa-state/swans_laverne.jpg">
+                            </li>
+                            <li>
+                                <img src="images/iowa-state/fall_armory.jpg">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            <div class="col l6 offset-12 s12 red accent-4">
+                <div class="white-text">
+                    <p>
+                        <b>Iowa State University of Science and Technology is a public land grant university located in Ames, Iowa. Founded in 1858, Iowa State University has a long tradition of higher education. In 1942, Iowa State professor John Atanasoff and his assistant invented the first electronic digital computer.</b>
+                    </p>
+                </div>
+            </div>
+            </div>
+        </div>
         <footer class="page-footer red accent-4">
             <div class="container">
                 <div class="row">
