updated work - need to spell linkedin

--- a/education.html
+++ b/education.html
@@ -7,18 +7,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 	</head>
-	<body class="yellow lighten-4">
+	<body class="teal lighten-5">
 		<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 
-		<script type="text/javascript" src="//C:/Users/msila/Desktop/HTML/javas.js"></script>
+		<script type="text/javascript" src="javas.js"></script>
         
-  </nav>
         <!-- Naviagtion Menu -->
-        <header>
-            <nav class="red accent-4 nav-wrapper">
+        <header class="flex-nav">
+            <nav class="blue darken-4 nav-wrapper flex-nav">
                     <div>
-                        <ul id="slide-out" class="side-nav red accent-4 text-header">
+                        <ul id="slide-out" class="side-nav blue darken-4 text-header">
                             <li><a href="C:/Users/msila/Desktop/HTML/website.html"><span class="white-text">About Me</span><i class="material-icons md-24" style="float:right;">account_circle</i></a></li>
                             <li><a href="#!"><span class="white-text">Education</span><i class="material-icons md-24" style="float:right;">school</i></a></li>
                             <li><a href="#!"><span class="white-text">Work Experience</span><i class="material-icons md-24" style="float:right;">work</i></a></li>
@@ -26,54 +25,175 @@
                             <li><a href="#!"><span class="white-text">Download Resume</span><i class="material-icons md-24" style="float:right;">get_app</i></a></li>
                             <li><a href="https://www.linkedin.com/in/michaelarassilacs"><span class="white-text">Linkden</span><i class="material-icons md-24" style="float:right;">link</i></a></li>
                         </ul>
-                        <a href="#" data-activates="slide-out" class="button-collapse show-on-large red accent-4"><i class="material-icons">menu</i></a>
+                        <a href="#" data-activates="slide-out" class="button-collapse show-on-large blue darken-4"><i class="material-icons">menu</i></a>
                     </div>
                     <div class="header right text-header">
-                        <a href="C:/Users/msila/Desktop/HTML/education.html">Education</a>
+                        <a href="education.html" >Education</a>
                 </div>
                     
             </nav>
         </header>
-        <div class="page-body">
-            <div class="red accent-4 sub-header">
-                <h3 class="center white-text">Iowa State University</h3>
-            </div>
-            <div class="container row">
-                <div class="col l6 s12">
-                    <div class="slider">
-                        <ul class="slides">
-                            <li>
-                                <img src="images/iowa-state/sign_outsideMU.jpg">
-                            </li>
-                            <li>
-                                <img src="images/iowa-state/campanille_snow.jpg">
-                            </li>
-                            <li>
-                                <img src="images/iowa-state/swans_laverne.jpg">
-                            </li>
-                            <li>
-                                <img src="images/iowa-state/fall_armory.jpg">
-                            </li>
-                        </ul>
+        <main>
+            <div class="page-body">
+                <div class="sub_section">
+                <div class="blue darken-4 sub-header">
+                    <span class="white-text date-range">Fall 2014 - Present</span>
+                    <h3 class="center white-text">Iowa State University</h3>
+                </div>
+                <div class="container row">
+                    <div class="col l6 s12">
+                        <div class="slider">
+                            <ul class="slides">
+                                <li>
+                                    <img src="images/iowa-state/sign_outsideMU.jpg">
+                                </li>
+                                <li>
+                                    <img src="images/iowa-state/campanille_snow.jpg">
+                                </li>
+                                <li>
+                                    <img src="images/iowa-state/swans_laverne.jpg">
+                                </li>
+                                <li>
+                                    <img src="images/iowa-state/fall_armory.jpg">
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                <div class="col l6 offset-12 s12 blue darken-4">
+                    <div class="white-text">
+                        <p>
+                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                        </p>
+                        <p>
+                            "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+
+                        </p>
                     </div>
                 </div>
-            <div class="col l6 offset-12 s12 red accent-4">
-                <div class="white-text">
-                    <p>
-                        <b>Iowa State University of Science and Technology is a public land grant university located in Ames, Iowa. Founded in 1858, Iowa State University has a long tradition of higher education. In 1942, Iowa State professor John Atanasoff and his assistant invented the first electronic digital computer.</b>
-                    </p>
+                </div>
+                </div>
+                <div class="sub_section">
+                    <div class="blue darken-4 sub-header">
+                        <span class="white-text date-range">Fall 2012 - Spring 2014</span>
+                        <h3 class="center white-text">Lafayette College</h3>
+                    </div>
+                    <div class="container row">
+                        <div class="col l6 s12">
+                            <div class="slider">
+                                <ul class="slides">
+                                    <li>
+                                        <img src="images/lafayette/sign.jpg">
+                                    </li>
+                                    <li>
+                                        <img src="images/lafayette/overhead.jpg">
+                                    </li>
+                                    <li>
+                                        <img src="images/lafayette/skillman-library.jpg">
+                                    </li>
+                                    <li>
+                                        <img src="images/lafayette/kirby.jpg">
+                                    </li>
+
+                                </ul>
+                            </div>
+
+                        </div>
+                        <div class="col l6 offset-12 s12 blue darken-4">
+                            <div class="white-text">
+                            <p>
+                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                            </p>
+                            <p>
+                            "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+
+                            </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="sub_section">
+                    <div class="blue darken-4 sub-header">
+                        <span class="white-text date-range">Fall 2012 - Spring 2014</span>
+                        <h3 class="center white-text">Towson University</h3>
+                    </div>
+                    <div class="container row">
+                        <div class="col l6 s12">
+                            <div class="slider">
+                                <ul class="slides">
+                                    <li>
+                                        <img src="images/towson/t_sign.jpg">
+                                    </li>
+                                    <li>
+                                        <img src="images/towson/west_village.jpg">
+                                    </li>
+                                    <li>
+                                        <img src="images/towson/cla-exterior-m.jpg">
+                                    </li>
+                                    <li>
+                                        <img src="images/towson/Burdick-Hall.jpg">
+                                    </li>
+
+                                </ul>
+                            </div>
+
+                        </div>
+                        <div class="col l6 offset-12 s12 blue darken-4">
+                            <div class="white-text">
+                            <p>
+                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                            </p>
+                            <p>
+                            "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+
+                            </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="sub_section">
+                <div class="blue darken-4 sub-header">
+                    <span class="white-text date-range">Fall 2008 - Spring 2012</span>
+                    <h3 class="center white-text">Staples High School</h3>
+                </div>
+                <div class="container row">
+                    <div class="col l6 s12">
+                        <div class="slider">
+                            <ul class="slides">
+                                <li>
+                                    <img src="images/staples/font.jpg">
+                                </li>
+                                <li>
+                                    <img src="images/staples/front_ii.jpg">
+                                </li>
+                                <li>
+                                    <img src="images/staples/graduation.jpg">
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                <div class="col l6 offset-12 s12 blue darken-4">
+                    <div class="white-text">
+                        <p>
+                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                        </p>
+                        <p>
+                            "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+
+                        </p>
+                    </div>
+                </div>
+                </div>
                 </div>
             </div>
-            </div>
-        </div>
-        <footer class="page-footer red accent-4">
+        </main>
+        <footer class="page-footer blue darken-4">
             <div class="container">
                 <div class="row">
                     <div class="col l6 s12">
                         <h5 class="white-text">Contact Me</h5>
                         <p class="white-text">If you are an employer, recruiter, developer, or wish to discuss any employment related information with me, please email 
-                            me at <a href="mailto:michael.sila.career@outlook.com" target="_top"><u class="yellow-text text-lighten-3">michael.sila.career@outlook.com</u></a>. If you wish to contact me for
-                        any other reason, please email me at <a href="mailto:silamichael@gmail.com"><u class="yellow-text text-lighten-3">silamichael@gmail.com</u></a>.</p>
+                            me at <a href="mailto:michael.sila.career@outlook.com" target="_top"><u class="purple-text text-lighten-3">michael.sila.career@outlook.com</u></a>. If you wish to contact me for
+                        any other reason, please email me at <a href="mailto:silamichael@gmail.com"><u class="purple-text text-lighten-3">silamichael@gmail.com</u></a>.</p>
                     </div>
                     <div class="col l4 offset-12 s12">
                         <h5 class="white-text">External Links</h5>
