--- a/website.html
+++ b/website.html
@@ -14,23 +14,25 @@
 		<script type="text/javascript" src="javas.js"></script>
         <!-- Naviagtion Menu -->
         <header>
+            <div class="navbar-fixed">
             <nav class="blue darken-4 nav-wrapper">
-                    <div>
-                        <ul id="slide-out" class="side-nav blue darken-4 text-header">
-                            <li><a href="website.html"><span class="white-text">About Me</span><i class="material-icons md-24" style="float:right;">account_circle</i></a></li>
-                            <li><a href="education.html"><span class="white-text">Education</span><i class="material-icons md-24" style="float:right;">school</i></a></li>
-                            <li><a href="#!"><span class="white-text">Work Experience</span><i class="material-icons md-24" style="float:right;">work</i></a></li>
-                            <li><a href="#!"><span class="white-text">My Projects</span><i class="material-icons md-24" style="float:right;">memory</i></a></li>
-                            <li><a href="#!"><span class="white-text">Download Resume</span><i class="material-icons md-24" style="float:right;">get_app</i></a></li>
-                            <li><a href="https://www.linkedin.com/in/michaelarassilacs"><span class="white-text">Linkden</span><i class="material-icons md-24" style="float:right;">link</i></a></li>
-                        </ul>
-                        <a href="#" data-activates="slide-out" class="button-collapse show-on-large blue darken-4"><i class="material-icons">menu</i></a>
+                        <div>
+                            <ul id="slide-out" class="side-nav blue darken-4 text-header">
+                                <li><a href="website.html"><span class="white-text">About Me</span><i class="material-icons md-24" style="float:right;">account_circle</i></a></li>
+                                <li><a href="education.html"><span class="white-text">Education</span><i class="material-icons md-24" style="float:right;">school</i></a></li>
+                                <li><a href="#!"><span class="white-text">Work Experience</span><i class="material-icons md-24" style="float:right;">work</i></a></li>
+                                <li><a href="#!"><span class="white-text">My Projects</span><i class="material-icons md-24" style="float:right;">memory</i></a></li>
+                                <li><a href="#!"><span class="white-text">Download Resume</span><i class="material-icons md-24" style="float:right;">get_app</i></a></li>
+                                <li><a href="https://www.linkedin.com/in/michaelarassilacs"><span class="white-text">Linkden</span><i class="material-icons md-24" style="float:right;">link</i></a></li>
+                            </ul>
+                            <a href="#" data-activates="slide-out" class="button-collapse show-on-large blue darken-4"><i class="material-icons">menu</i></a>
+                        </div>
+                        <div class="header right text-header">
+                            <a href="website.html">Michael Sila  </a>
                     </div>
-                    <div class="header right text-header">
-                        <a href="website.html">Michael Sila  </a>
-                </div>
-                    
-            </nav>
+
+                </nav>
+            </div>
         </header>
         <main>
     
@@ -47,7 +49,7 @@
                     <div class="col l4 offset-12 s12">
                         <h5 class="white-text">External Links</h5>
                         <ul>
-                            <li class="white-text">Linkden</li>
+                            <li class="white-text">Linkedin</li>
                             <li class="white-text">Gitlab</li>
                             <li class="white-text">Github</li>
                             <li class="white-text">Personal Blog</li>
