--- a/testbed.html
+++ b/testbed.html
@@ -28,13 +28,20 @@
                     <div class="col-6@sm">
                         <div class="filter-group filter-group--compound js-level">
                             <h5 class="filter-group__label filter-group__label--compound">Level</h5>
-                            <button class="btn" data-value="100-level">100-level</button>
-                            <button class="btn" data-value="200-level">200-level</button>
-                            <button class="btn" data-value="300-level">300-level</button>
-                            <button class="btn" data-value="400-level">400-level</button>
+                            <span class="ib">
+                                <input type="checkbox" value="100-level" id="cb-100"> <label for="cb-100">100-level</label>
+                            </span>
+                            <span class="ib">
+                                <input type="checkbox" value="200-level" id="cb-200"> <label for="cb-200">200-level</label>
+                            </span>
+                            <span class="ib">
+                                <input type="checkbox" value="300-level" id="cb-300"> <label for="cb-300">300-level</label>
+                            </span>
+                            <span class="ib">
+                                <input type="checkbox" value="400-level" id="cb-400"> <label for="cb-400">400-level</label>
+                            </span>
                         </div>
                     </div>
-
                     <div class="col-6@sm">
                         <div class="filter-group filter-group--compound js-school">
                             <h5 class="filter-group__label filter-group__label--compound">School</h5>
@@ -49,11 +56,24 @@
                             </span>
                         </div>
                     </div>
-
+                    <div class="col-6@sm">
+                        <div class="filter-group filter-group--compound js-school">
+                            <h5 class="filter-group__label filter-group__label--compound">School</h5>
+                            <span class="ib">
+                                <input type="checkbox" value="CS" id="cb-coms"> <label for="cb-isu">Iowa State University</label>
+                            </span>
+                            <span class="ib">
+                                <input type="checkbox" value="HIST" id="cb-hist"> <label for="cb-laf">Lafayette College</label>
+                            </span>
+                            <span class="ib">
+                                <input type="checkbox" value="MISC" id="cb-misc"> <label for="cb-tsu">Towson University</label>
+                            </span>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="shape-shuffle-container js-shuffle row">
-                    <div class="col-5@xs col-5@sm shape card" data-school="towson" data-level="100-level">
+                    <div class="col-5@xs col-5@sm shape card" data-school="towson" data-level="100-level" data-subject="CS">
                         <div class="card-content">
                             <span class="card-title">Intro to Programming</span>
                             <p>I am a very simple card. I am good at containing small bits of information.
@@ -64,7 +84,18 @@
                             <a href="#">This is a link</a>
                         </div>
                     </div>
-                    <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="200-level">
+                    <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="200-level" data-subject="CS">
+                        <div class="card-content">
+                            <span class="card-title">Fundementals of Programming</span>
+                            <p>I am a very simple card. I am good at containing small bits of information.
+                                I am convenient because I require little markup to use effectively.</p>
+                        </div>
+                        <div class="card-action">
+                            <a href="#">This is a link</a>
+                            <a href="#">This is a link</a>
+                        </div>
+                    </div>
+                    <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="200-level" data-subject="CS">
                         <div class="card-content">
                             <span class="card-title">Data Structures and Algorithms</span>
                             <p>I am a very simple card. I am good at containing small bits of information.
@@ -75,7 +106,18 @@
                             <a href="#">This is a link</a>
                         </div>
                     </div>
-                    <div class="col-5@xs col-5@sm shape card" data-school="lafayette" data-level="200-level">
+                    <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="200-level" data-subject="CS">
+                        <div class="card-content">
+                            <span class="card-title">Digital Logic</span>
+                            <p>I am a very simple card. I am good at containing small bits of information.
+                                I am convenient because I require little markup to use effectively.</p>
+                        </div>
+                        <div class="card-action">
+                            <a href="#">This is a link</a>
+                            <a href="#">This is a link</a>
+                        </div>
+                    </div>
+                    <div class="col-5@xs col-5@sm shape card" data-school="lafayette" data-level="200-level" data-subject="CS">
                         <div class="card-content">
                             <span class="card-title">Software Development and Design</span>
                             <p>I am a very simple card. I am good at containing small bits of information.
@@ -86,7 +128,7 @@
                             <a href="#">This is a link</a>
                         </div>
                     </div>
-                    <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="300-level">
+                    <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="300-level" data-subject="CS">
                         <div class="card-content">
                             <span class="card-title">Advanced Programming Techniques</span>
                             <p>I am a very simple card. I am good at containing small bits of information.
@@ -97,18 +139,18 @@
                             <a href="#">This is a link</a>
                         </div>
                     </div>
-                    <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="300-level">
+                    <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="300-level" data-subject="CS">
                         <div class="card-content">
                             <span class="card-title">Discrete Mathematics</span>
                             <p>I am a very simple card. I am good at containing small bits of information.
                                 I am convenient because I require little markup to use effectively.</p>
-                        </div>
-                        <div class="card-action">
-                            <a href="#">This is a link</a>
-                            <a href="#">This is a link</a>
+                            <div class="card-action">
+                                <a href="#">This is a link</a>
+                                <a href="#">This is a link</a>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="300-level">
+                    <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="300-level" data-subject="CS">
                         <div class="card-content">
                             <span class="card-title">Computer Language Semantics and Grammer</span>
                             <p>I am a very simple card. I am good at containing small bits of information.
@@ -117,6 +159,28 @@
                         <div class="card-action">
                             <a href="#">This is a link</a>
                             <a href="#">This is a link</a>
+                        </div>
+                    </div>
+                    <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="300-level" data-subject="CS">
+                        <div class="card-content">
+                            <span class="card-title">Computer Architecute and Machine Language</span>
+                            <p>I am a very simple card. I am good at containing small bits of information.
+                                I am convenient because I require little markup to use effectively.</p>
+                            <div class="card-action">
+                                <a href="#">This is a link</a>
+                                <a href="#">This is a link</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="300-level" data-subject="CS">
+                        <div class="card-content">
+                            <span class="card-title">Databases</span>
+                            <p>I am a very simple card. I am good at containing small bits of information.
+                                I am convenient because I require little markup to use effectively.</p>
+                            <div class="card-action">
+                                <a href="#">This is a link</a>
+                                <a href="#">This is a link</a>
+                            </div>
                         </div>
                     </div>
                     <div class="the-sizer col-1@xs col-1@sm"></div>
