Added school selector

--- a/testbed.html
+++ b/testbed.html
@@ -57,16 +57,16 @@
                         </div>
                     </div>
                     <div class="col-6@sm">
-                        <div class="filter-group filter-group--compound js-school">
-                            <h5 class="filter-group__label filter-group__label--compound">School</h5>
+                        <div class="filter-group filter-group--compound js-subject">
+                            <h5 class="filter-group__label filter-group__label--compound">Subject</h5>
                             <span class="ib">
-                                <input type="checkbox" value="CS" id="cb-coms"> <label for="cb-isu">Iowa State University</label>
+                                <input type="checkbox" value="CS" id="cb-coms"> <label for="cb-coms">Computer Science</label>
                             </span>
                             <span class="ib">
-                                <input type="checkbox" value="HIST" id="cb-hist"> <label for="cb-laf">Lafayette College</label>
+                                <input type="checkbox" value="HIST" id="cb-hist"> <label for="cb-hist">History</label>
                             </span>
                             <span class="ib">
-                                <input type="checkbox" value="MISC" id="cb-misc"> <label for="cb-tsu">Towson University</label>
+                                <input type="checkbox" value="MISC" id="cb-misc"> <label for="cb-misc">Miscellaneous</label>
                             </span>
                         </div>
                     </div>
