--- a/website.html
+++ b/website.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 	</head>
-	<body class="teal lighten-5">
+	<body>
 		<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 
@@ -15,9 +15,9 @@
         <!-- Naviagtion Menu -->
         <header>
             <div class="navbar-fixed">
-            <nav class="blue darken-4 nav-wrapper">
+            <nav class="blue nav-wrapper">
                         <div>
-                            <ul id="slide-out" class="side-nav blue darken-4 text-header">
+                            <ul id="slide-out" class="side-nav blue text-header">
                                 <li><a href="website.html"><span class="white-text">About Me</span><i class="material-icons md-24" style="float:right;">account_circle</i></a></li>
                                 <li><a href="education.html"><span class="white-text">Education</span><i class="material-icons md-24" style="float:right;">school</i></a></li>
                                 <li><a href="#!"><span class="white-text">Work Experience</span><i class="material-icons md-24" style="float:right;">work</i></a></li>
@@ -25,7 +25,7 @@
                                 <li><a href="#!"><span class="white-text">Download Resume</span><i class="material-icons md-24" style="float:right;">get_app</i></a></li>
                                 <li><a href="https://www.linkedin.com/in/michaelarassilacs"><span class="white-text">Linkden</span><i class="material-icons md-24" style="float:right;">link</i></a></li>
                             </ul>
-                            <a href="#" data-activates="slide-out" class="button-collapse show-on-large blue darken-4"><i class="material-icons">menu</i></a>
+                            <a href="#" data-activates="slide-out" class="button-collapse show-on-large blue"><i class="material-icons">menu</i></a>
                         </div>
                         <div class="header right text-header">
                             <a href="website.html">Michael Sila  </a>
@@ -37,14 +37,14 @@
         <main>
     
         </main>
-        <footer class="page-footer blue darken-4">
+        <footer class="page-footer blue">
             <div class="container">
                 <div class="row">
                     <div class="col l6 s12">
                         <h5 class="white-text">Contact Me</h5>
                         <p class="white-text">If you are an employer, recruiter, developer, or wish to discuss any employment related information with me, please email 
-                            me at <a href="mailto:michael.sila.career@outlook.com" target="_top"><u class="purple-text text-lighten-3">michael.sila.career@outlook.com</u></a>. If you wish to contact me for
-                        any other reason, please email me at <a href="mailto:silamichael@gmail.com"><u class="purple-text text-lighten-3">silamichael@gmail.com</u></a>.</p>
+                            me at <a href="mailto:michael.sila.career@outlook.com" target="_top"><u class="purple-text text-lighten-4">michael.sila.career@outlook.com</u></a>. If you wish to contact me for
+                        any other reason, please email me at <a href="mailto:silamichael@gmail.com"><u class="purple-text text-lighten-4">silamichael@gmail.com</u></a>.</p>
                     </div>
                     <div class="col l4 offset-12 s12">
                         <h5 class="white-text">External Links</h5>
