--- a/education.html
+++ b/education.html
@@ -493,7 +493,7 @@
                             <div class="location">Lafayette College</div>
                         </div>
                     </div>
-                    <div class="col-5@xs col-5@sm shape card" data-school="towson" data-level="" data-subject="">
+                    <div class="col-5@xs col-5@sm shape card" data-school="" data-level="" data-subject="">
                         <div class="card-content">
                             <span class="card-title">Title</span>
                             <p>Lorem Ipsum</p>
