finished adding courses

--- a/website.html
+++ b/website.html
@@ -22,8 +22,8 @@
                                 <li><a href="education.html"><span class="white-text">Education</span><i class="material-icons md-24" style="float:right;">school</i></a></li>
                                 <li><a href="#!"><span class="white-text">Work Experience</span><i class="material-icons md-24" style="float:right;">work</i></a></li>
                                 <li><a href="#!"><span class="white-text">My Projects</span><i class="material-icons md-24" style="float:right;">memory</i></a></li>
-                                <li><a href="#!"><span class="white-text">Download Resume</span><i class="material-icons md-24" style="float:right;">get_app</i></a></li>
-                                <li><a href="https://www.linkedin.com/in/michaelarassilacs"><span class="white-text">Linkden</span><i class="material-icons md-24" style="float:right;">link</i></a></li>
+                                <li><a href="other_resources/MichaelSila_Resume_July2016.pdf" download><span class="white-text">Download Resume</span><i class="material-icons md-24" style="float:right;">get_app</i></a></li>
+                                <li><a href="https://www.linkedin.com/in/michaelarassilacs"><span class="white-text">Linkedin</span><i class="material-icons md-24" style="float:right;">link</i></a></li>
                             </ul>
                             <a href="#" data-activates="slide-out" class="button-collapse show-on-large blue"><i class="material-icons">menu</i></a>
                         </div>
