--- a/education.html
+++ b/education.html
@@ -20,12 +20,12 @@
                 <nav class="blue nav-wrapper fixed">
                         <div>
                             <ul id="slide-out" class="side-nav blue text-header">
-                                <li><a href="C:/Users/msila/Desktop/HTML/website.html"><span class="white-text">About Me</span><i class="material-icons md-24" style="float:right;">account_circle</i></a></li>
+                                <li><a href="website.html"><span class="white-text">About Me</span><i class="material-icons md-24" style="float:right;">account_circle</i></a></li>
                                 <li><a href="#!"><span class="white-text">Education</span><i class="material-icons md-24" style="float:right;">school</i></a></li>
                                 <li><a href="#!"><span class="white-text">Work Experience</span><i class="material-icons md-24" style="float:right;">work</i></a></li>
-                                <li><a href="#!"><span class="white-text">My Projects</span><i class="material-icons md-24" style="float:right;">memory</i></a></li>S
-                                <li><a href="#!"><span class="white-text">Download Resume</span><i class="material-icons md-24" style="float:right;">get_app</i></a></li>
-                                <li><a href="https://www.linkedin.com/in/michaelarassilacs"><span class="white-text">Linkden</span><i class="material-icons md-24" style="float:right;">link</i></a></li>
+                                <li><a href="#!"><span class="white-text">My Projects</span><i class="material-icons md-24" style="float:right;">memory</i></a></li>
+                                <li><a href="other_resources/MichaelSila_Resume_July2016.pdf" download><span class="white-text">Download Resume</span><i class="material-icons md-24" style="float:right;">get_app</i></a></li>
+                                <li><a href="https://www.linkedin.com/in/michaelarassilacs"><span class="white-text">Linkedin</span><i class="material-icons md-24" style="float:right;">link</i></a></li>
                             </ul>
                             <a href="#" data-activates="slide-out" class="button-collapse show-on-large blue"><i class="material-icons">menu</i></a>
                         </div>
@@ -493,14 +493,84 @@
                             <div class="location">Lafayette College</div>
                         </div>
                     </div>
-                    <div class="col-5@xs col-5@sm shape card" data-school="" data-level="" data-subject="">
+                    <div class="col-5@xs col-5@sm shape card" data-school="lafayette" data-level="100-level" data-subject="MISC">
                         <div class="card-content">
-                            <span class="card-title">Title</span>
+                            <span class="card-title">Chemistry I</span>
                             <p>Lorem Ipsum</p>
                         </div>
                         <div class="card-action">
-                            <div class="coursenum">CourseName</div>
-                            <div class="location">Location</div>
+                            <div class="coursenum">Chem 121</div>
+                            <div class="location">Lafayette College</div>
+                        </div>
+                    </div>
+                    <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="100-level" data-subject="MISC">
+                        <div class="card-content">
+                            <span class="card-title">Introduction to Food Safety and Nutrition</span>
+                            <p>Lorem Ipsum</p>
+                        </div>
+                        <div class="card-action">
+                            <div class="coursenum">FS HN 101</div>
+                            <div class="location">Iowa State University</div>
+                        </div>
+                    </div>
+                    <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="200-level" data-subject="MISC">
+                        <div class="card-content">
+                            <span class="card-title">Public Speaking</span>
+                            <p>Lorem Ipsum</p>
+                        </div>
+                        <div class="card-action">
+                            <div class="coursenum">SP CM 212</div>
+                            <div class="location">Iowa State University</div>
+                        </div>
+                    </div>
+                    <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="300-level" data-subject="MISC">
+                        <div class="card-content">
+                            <span class="card-title">Engineering Statistics</span>
+                            <p>Lorem Ipsum</p>
+                        </div>
+                        <div class="card-action">
+                            <div class="coursenum">Stat 305</div>
+                            <div class="location">Iowa State University</div>
+                        </div>
+                    </div>
+                    <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="200-level" data-subject="MISC">
+                        <div class="card-content">
+                            <span class="card-title">Intro to Weather and Climate</span>
+                            <p>Lorem Ipsum</p>
+                        </div>
+                        <div class="card-action">
+                            <div class="coursenum">Agronomy 205</div>
+                            <div class="location">Iowa State University</div>
+                        </div>
+                    </div>
+                    <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="300-level" data-subject="HIST">
+                        <div class="card-content">
+                            <span class="card-title">The Classical Era</span>
+                            <p>Lorem Ipsum</p>
+                        </div>
+                        <div class="card-action">
+                            <div class="coursenum">History 304</div>
+                            <div class="location">Iowa State University</div>
+                        </div>
+                    </div>
+                    <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="300-level" data-subject="HIST">
+                        <div class="card-content">
+                            <span class="card-title">Early Modern England</span>
+                            <p>Lorem Ipsum</p>
+                        </div>
+                        <div class="card-action">
+                            <div class="coursenum">History 325</div>
+                            <div class="location">Iowa State University</div>
+                        </div>
+                    </div>
+                    <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="400-level" data-subject="HIST">
+                        <div class="card-content">
+                            <span class="card-title">Colonial Era and the American Revolution</span>
+                            <p>Lorem Ipsum</p>
+                        </div>
+                        <div class="card-action">
+                            <div class="coursenum">History 451</div>
+                            <div class="location">Iowa State University</div>
                         </div>
                     </div>
                     <div class="the-sizer col-1@xs col-1@sm"></div>
