--- a/education.html
+++ b/education.html
@@ -136,17 +136,17 @@
                                         <img src="images/towson/Burdick-Hall.jpg">
                                     </li>
 
-                                </ul>
+                                 </ul>
                             </div>
 
                         </div>
                         <div class="col l6 offset-12 s12">
                             <div>
                             <p>
-                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                            Towson University is a four-year higher education facility located in Towson, Maryland. Founded in 1866, Towson has strived to bring affordable education to the citizens of Maryland. As a  state school of Maryland, Towson incorporates a large amount of disciplines into its curriculum. Engineering, however, is not offered at Towson.
                             </p>
                             <p>
-                            "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+                            Unlike Iowa State and Lafayette college, I really didn’t know what to expect for my time at Towson when I enrolled in Spring of 2013. The only thing I did know is that I needed to get away from Lafayette. The college that I thought would be my home for four wonderful years quickly turned into a prison that I desperately needed an escape from. Towson, with credits that would be able to transfer back to Lafayette, was good enough. However, my time at Towson had a number of pleasant surprises that, while not academic in nature, had a profound effect on me going forward. To put it quite simply, Towson University was my first experience with a culture different from that of Lafayette and my hometown. Towson, an affordable state university, attracted a much different set of people with a much different set of values than my 60k-a-year private college. I felt that there was a lot to learn in terms of work ethic, understanding different walks of life, and the massively underrated skill of having a good attitude towards life in general. Most importantly, Towson made me realize just how much I could grow if I simply opened my mind to the road less traveled. While I did not end up staying at Towson, my time there shaped what I look for in an education and career in ways that cannot be understated. 
 
                             </p>
                             </div>
